Finished Coding Blitz Part 1 (Java) and Part 2 (Web) - John Rowelle Ambuan - 25-1984-196

--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Records - John Rowelle Ambuan 123456</title>
+    <title>Student Records - John Rowelle Ambuan 25-1984-196</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Student Records - John Rowelle Ambuan 123456</h1>
+    <h1>Student Records - John Rowelle Ambuan 25-1984-196</h1>
 
     <table id="studentTable">
         <thead>
